<resources>
    <string name="lbl_app_name">ATS Universal</string>
    <string name="lbL_bridge">ATS BRIDGE</string>
    <string name="lbl_disconnect_receiver">Receiver Disconnected</string>
    <string name="title_bridge_app">BRIDGE APP</string>
    <string name="lbl_bridge_app_device_selection">Device Selection</string>
    <string name="lbl_bridge_app_device_type">What type of device are you using? Please select from the categories below.</string>
    <string name="lbl_bridge_app_device_categories">Device Categories</string>
    <string name="lbl_bridge_app_supported_models">List of supported models.</string>
    <string name="lbl_bridge_app_dark_mode">Dark Mode</string>
    <string name="lbl_bridge_app_update_required">Update Required</string>
    <string name="lbl_bridge_app_update_desc">We have made an important update to the app and we need you to install the latest version. Please head to the Google Play Store and upgrade to the latest version to continue using the app. Thank you.</string>
    <string-array name="array_bridge_app_categories">
        <item>VHF Receivers</item>
        <item>BT2400 BluTrack Receiver</item>
        <item>Wildlink</item>
    </string-array>
    <string-array name="array_bridge_app_connection_modes">
        <item>Connect to BluTrack</item>
        <item>View Beacon Tags Directly</item>
    </string-array>
    <string name="title_bluetooth_tags">BluTrack Beacon</string>
    <string name="lbl_bluetooth_tags_receive_data">How are you going to receive data?</string>
    <string name="lbl_bluetooth_tags_message">BluTrack give you the option of connecting to a receiver or listening to tag transmissions directly.</string>
    <string name="lbl_bluetooth_tags_connection_modes">Connection Modes</string>
    <string name="lbl_bluetooth_tags_brief_description">Brief Description.</string>
    <string name="title_device_selection_vhf">SELECT VHF RECEIVER</string>
    <string name="title_device_selection_acoustic">SELECT ACOUSTIC RECEIVER</string>
    <string name="title_device_selection_bluetooth_tag">SELECT TAG</string>
    <string name="title_device_selection_bluetooth_beacon">SELECT BLUTRACK</string>
    <string name="title_device_selection_wildlink">SELECT WILDLINK</string>
    <string name="lbl_device_selection_searching">Searching For Devices ...</string>
    <string name="lbl_device_selection_searching_msg">It is only going to take a few seconds.</string>
    <string name="lbl_device_selection_none_found">No Devices Found</string>
    <string name="lbl_device_selection_range_warning">Please make sure your devices are within range.</string>
    <string name="lbl_device_selection_selected">Device Selected</string>
    <string name="lbl_device_selection_click_instruction">Click the connect button.</string>
    <string name="lbl_device_selection_guide">Select device and click the connect button.</string>
    <string name="btn_device_selection_connect">Connect</string>
    <string name="btn_device_selection_retry">Retry</string>
    <string name="lbl_receiver_connection_unknown_device">Unknown device</string>
    <string name="lbl_receiver_connection_connecting_device">Connecting ...</string>
    <string name="lbl_receiver_connection_msg">This should only take a few seconds.</string>
    <string name="lbl_receiver_connection_failed">Failed to connect to device</string>
    <string name="lbl_receiver_connection_success">Success</string>
    <string name="lbl_receiver_connection_success_msg">Your device is connected.</string>
    <string name="btn_receiver_connection_cancel">Cancel</string>
    <string name="lbl_vhf_home_battery">Battery</string>
    <string name="lbl_vhf_home_sd_card">SD Card</string>
    <string name="lbl_vhf_home_sd_card_inserted">Inserted</string>
    <string name="lbl_vhf_home_low_power">Low Battery Detected</string>
    <string name="btn_vhf_home_start_scanning">Start Scanning</string>
    <string name="btn_vhf_home_configure_receiver">Configure Receiver</string>
    <string name="btn_vhf_home_manage_data">Manage Receiver Data</string>
    <string name="btn_vhf_home_convert_raw_data">Convert Raw Data (SD Card)</string>
    <string name="btn_vhf_home_disconnect">Disconnect</string>
    <string name="lbl_vhf_start_scan_manual">Manual Scan</string>
    <string name="lbl_vhf_start_scan_mobile">Mobile Scan</string>
    <string name="lbl_vhf_start_scan_stationary">Stationary Scan</string>
    <string name="lbl_vhf_start_scan_warn_no_tables">Warning: All frequency tables are empty. You must fill one before starting a mobile or stationary scan.</string>
    <string name="lbl_vhf_start_scan_warn_no_detection">Warning: Receiver detection filter not set. Please complete to be able to scan.</string>
    <string name="lbl_vhf_start_scan_warn_no_defaults">Warning: Receiver default settings not complete. Please complete settings to be able to scan.</string>
    <string name="btn_vhf_start_scan_go_tables">Go to Frequency Tables</string>
    <string name="btn_vhf_start_scan_go_detection">Go to Detection Filter Settings</string>
    <string name="btn_vhf_start_scan_go_settings">Go to Receiver Settings</string>
    <string name="title_vhf_manual_settings">Manual Scanning</string>
    <string name="title_vhf_manual_scanning">Manual Scanning ...</string>
    <string name="title_vhf_manual_change_frequency">Change Frequency</string>
    <string name="title_vhf_manual_select_audio">Select Codes for Audio</string>
    <string name="lbl_vhf_manual_current_frequency">Current Frequency</string>
    <string name="lbl_vhf_manual_starting_frequency">Starting Frequency</string>
    <string name="lbl_vhf_manual_gps_data">GPS Data</string>
    <string name="lbl_vhf_manual_enter_id_digit">Enter a two digit ID</string>
    <string name="lbl_vhf_manual_saving_targets">Saving targets ...</string>
    <string name="lbl_vhf_manual_code">Code</string>
    <string name="lbl_vhf_manual_signal_strength">Signal Strength</string>
    <string name="lbl_vhf_manual_detections">Detections</string>
    <string name="lbl_vhf_manual_mortality">Mortality</string>
    <string name="lbl_vhf_manual_period">Period</string>
    <string name="lbl_vhf_manual_pulse_rate">Pulse Rate</string>
    <string name="lbl_vhf_manual_latitude">Latitude</string>
    <string name="lbl_vhf_manual_longitude">Longitude</string>
    <string name="lbl_vhf_manual_id_audio">Code Audio</string>
    <string name="lbl_vhf_manual_option_single">Single</string>
    <string name="lbl_vhf_manual_option_all">All</string>
    <string name="lbl_vhf_manual_option_none">None</string>
    <string name="lbl_vhf_manual_option_background">Background</string>
    <string name="btn_vhf_manual_set_frequency">Edit Starting Frequency</string>
    <string name="btn_vhf_manual_start_scan">Start Manual Scan</string>
    <string name="btn_vhf_manual_edit_frequency">Edit Frequency</string>
    <string name="btn_vhf_manual_record_data">Record Data</string>
    <string name="btn_vhf_manual_edit_audio_options"><u>Edit Audio Options</u></string>
    <string name="title_vhf_mobile_settings">Mobile Scanning</string>
    <string name="title_vhf_mobile_scanning">Mobile Scanning ...</string>
    <string name="title_vhf_mobile_merge_table">Merge Table</string>
    <string name="lbl_vhf_mobile_scan_settings">Scan Settings</string>
    <string name="lbl_vhf_mobile_scan_time_seconds">Scan Time (Seconds)</string>
    <string name="lbl_vhf_mobile_scan_rate">Scan Rate</string>
    <string name="lbl_vhf_mobile_number_antennas">Number of Antennas</string>
    <string name="lbl_vhf_mobile_auto_record">Auto Record</string>
    <string name="lbl_vhf_mobile_frequency">Frequency</string>
    <string name="lbl_vhf_mobile_table_total">Table Total</string>
    <string name="lbl_vhf_mobile_current_index">Current Index</string>
    <string name="lbl_vhf_mobile_gps_searching">GPS: Searching</string>
    <string name="lbl_vhf_mobile_gps_off">GPS: Off</string>
    <string name="lbl_vhf_mobile_gps_valid">GPS: Valid</string>
    <string name="lbl_vhf_mobile_gps_failed">GPS: Failed</string>
    <string name="lbl_vhf_mobile_non_coded_detection">Non Coded Detection Filter</string>
    <string name="lbl_vhf_mobile_filter_type">Filter Type</string>
    <string name="lbl_vhf_mobile_frequency_deleted">Frequency Deleted</string>
    <string name="lbl_vhf_mobile_tables_merged">Table Merged</string>
    <string name="lbl_vhf_mobile_select_table_merge">Select a table to merge into scan table</string>
    <string name="lbl_vhf_mobile_fatal_scan_error">Fatal Scan Error</string>
    <string name="lbl_vhf_mobile_receiver_repair">Please send receiver in for repairs.</string>
    <string name="btn_vhf_mobile_start_scan">Start Mobile Scan</string>
    <string name="btn_vhf_mobile_edit_table"><u>Edit Table</u></string>
    <string name="btn_vhf_mobile_hold">Hold Frequency</string>
    <string name="btn_vhf_mobile_release">Release Frequency</string>
    <string name="btn_vhf_mobile_stop_recording">Stop Recording</string>
    <string name="btn_vhf_mobile_view_detection_filter"><u>View Detection Filter Settings</u></string>
    <string name="btn_vhf_mobile_edit_default_settings">Edit Default Settings</string>
    <string name="btn_vhf_mobile_add_frequency_scan">Add a Frequency to Table</string>
    <string name="btn_vhf_mobile_delete_frequency_scan">Delete Current Frequency From Table</string>
    <string name="btn_vhf_mobile_merge_table_scan">Merge Table Into Table</string>
    <string name="btn_vhf_mobile_dismiss">Dismiss</string>
    <string name="title_vhf_mobile_edit_table">Merge Table</string>
    <string name="lbl_vhf_mobile_edit_table_select_merge">Select a table to merge into scan table</string>
    <string name="lbl_vhf_mobile_edit_table_freq_deleted">Frequency Deleted</string>
    <string name="lbl_vhf_mobile_edit_table_success_merge">Table Merged</string>
    <string name="btn_vhf_mobile_edit_table_add_freq">Add a Frequency to Table</string>
    <string name="btn_vhf_mobile_edit_table_delete_freq">Delete Current Frequency From Table</string>
    <string name="btn_vhf_mobile_edit_table_merge_into">Merge Table Into Table</string>
    <string name="title_vhf_stationary_settings">Stationary Scanning</string>
    <string name="title_vhf_stationary_scanning">Stationary Scanning ...</string>
    <string name="lbl_vhf_stationary_store_rate">Store Rate (Minutes)</string>
    <string name="lbl_vhf_stationary_data_transfer">External Data Transfer</string>
    <string name="lbl_vhf_stationary_scan_details">Scan Details</string>
    <string name="btn_vhf_stationary_start_scan">Start Stationary Scan</string>
    <string name="lbl_vhf_tables_cant_empty_msg">This table cannot be emptied while it is selected as a scan table in the default settings, please remove from there first.</string>
    <string name="err_vhf_tables_cant_empty">Can\'t Empty Table</string>
    <string name="lbl_vhf_detection_select_pulse_rate_msg">Select Pulse Rate Type</string>
    <string name="lbl_vhf_detection_data_calc_types">Data Calculation Types</string>
    <string name="lbl_vhf_detection_temperature">Temperature</string>
    <string name="lbl_vhf_detection_type_coded">Coded</string>
    <string name="lbl_vhf_detection_type_non_coded_fixed">Non Coded (Fixed Pulse Rate)</string>
    <string name="lbl_vhf_detection_type_non_coded_variable">Non Coded (Variable Pulse Rate)</string>
    <string name="lb_firmware_update">Firmware Update Available</string>
    <string name="lb_firmware_version_available">A newer firmware version is available for your receiver.</string>
    <string name="lb_dismiss">Dismiss</string>
    <string name="lb_update_now">Update Now</string>
    <string name="lbl_bt_tag_location_enabled">Location Data (Enabled)</string>
    <string name="lbl_bt_tag_location_unknown">Location: Unknown</string>
    <string name="lbl_bt_tag_detected_count">Detected Tags:</string>
    <string name="lbl_bt_tag_option_disable">Disable</string>
</resources>