<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firmware_update_message_linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16sp"
    android:background="@color/slate_50"
    android:elevation="@dimen/elevation_button"
    android:orientation="vertical"
    android:padding="16sp">

    <ImageButton
        android:id="@+id/ib_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_close"
        tools:ignore="ContentDescription" />

    <TextView
        style="@style/body_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12sp"
        android:layout_marginVertical="8sp"
        android:text="@string/err_vhf_tables_cant_empty"
        android:textColor="@color/slate_700" />

    <TextView
        style="@style/body_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="12sp"
        android:layout_marginBottom="16sp"
        android:text="@string/lbl_vhf_tables_cant_empty_msg"
        android:textColor="@color/slate_700" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <TextView
            android:id="@+id/tv_dismiss"
            style="@style/button_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24sp"
            android:text="@string/btn_vhf_mobile_dismiss"
            android:textColor="@color/slate_700" />

        <Button
            android:id="@+id/btn_edit_default"
            style="@style/button_primary_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8sp"
            android:text="@string/btn_vhf_mobile_edit_default_settings" />

    </LinearLayout>

</LinearLayout>