<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="8sp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_mobile_title"
        style="@style/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:text="@string/lbl_vhf_mobile_scan_settings" />

    <include
        android:id="@+id/include_mobile_settings"
        layout="@layout/include_mobile_settings" />

    <TextView
        android:id="@+id/tv_edit_mobile_default"
        style="@style/button_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16sp"
        android:gravity="end"
        android:text="@string/btn_vhf_mobile_edit_default_settings"
        android:textColor="@color/limed_spruce" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="NestedWeights" />

    <Button
        android:id="@+id/btn_start_mobile"
        style="@style/button_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:text="@string/btn_vhf_mobile_start_scan" />

</LinearLayout>