<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16sp"
    android:background="@color/slate_50"
    android:elevation="@dimen/elevation_button"
    android:orientation="vertical"
    android:padding="16sp">

    <ImageButton
        android:id="@+id/ib_close_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_close"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="16sp"
        android:background="@drawable/ic_download"
        tools:ignore="ContentDescription" />

    <TextView
        style="@style/body_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/lb_firmware_update"
        android:textColor="@color/slate_700" />

    <TextView
        style="@style/body_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8sp"
        android:layout_marginBottom="16sp"
        android:text="@string/lb_firmware_version_available"
        android:textColor="@color/slate_700" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dismiss"
            style="@style/button_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24sp"
            android:text="@string/lb_dismiss"
            android:textColor="@color/slate_700" />

        <Button
            android:id="@+id/btn_update_firmware"
            style="@style/button_primary_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_update_now" />

    </LinearLayout>

</LinearLayout>