<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16sp"
        android:padding="16sp"
        android:background="@color/catskill_white">

        <ImageView
            android:id="@+id/img_location_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_gps_valid"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8sp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_location_data"
                style="@style/body_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8sp"
                android:text="@string/lbl_bt_tag_location_enabled"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_coordinates"
                style="@style/body_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_bt_tag_location_unknown"
                android:textColor="@color/ebony_clay" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_location_data"
            style="@style/button_tertiary_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_bt_tag_option_disable" />

    </LinearLayout>

    <TextView
        style="@style/body_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16sp"
        android:text="@string/lbl_bt_tag_detected_count"
        android:textStyle="bold" />

    <include
        android:id="@+id/include_recycler_view"
        layout="@layout/include_recycler_view"/>

</LinearLayout>