<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="24sp"
        android:layout_marginEnd="16sp"
        android:text="@string/lbl_vhf_detection_data_calc_types"
        android:textColor="@color/limed_spruce" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16sp"
        android:layout_marginVertical="8sp"
        android:background="@color/catskill_white"
        android:elevation="4sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_none"
            style="@style/body_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16sp"
            android:text="@string/lbl_vhf_manual_option_none"
            android:textColor="@color/ebony_clay" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/tv_temperature"
            style="@style/body_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16sp"
            android:text="@string/lbl_vhf_detection_temperature"
            android:textColor="@color/ebony_clay" />

    </LinearLayout>

</LinearLayout>