<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="8sp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_stationary_title"
                style="@style/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16sp"
                android:text="@string/lbl_vhf_mobile_scan_settings" />

            <include
                android:id="@+id/include_stationary_settings"
                layout="@layout/include_stationary_settings" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tv_edit_stationary_default"
        style="@style/button_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16sp"
        android:layout_marginTop="16sp"
        android:gravity="end"
        android:text="@string/btn_vhf_mobile_edit_default_settings"
        android:textColor="@color/limed_spruce" />

    <Button
        android:id="@+id/btn_start_stationary"
        style="@style/button_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:text="@string/btn_vhf_stationary_start_scan" />

</LinearLayout>